--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,13 +17,21 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url].longURL %></td>
+            <td><%= urls[url] %></td>
+            <td>
+              <form method="POST" action="/urls/9sm5xK/delete">
+                <div class="button">
+                  <button type="submit" class="btn-lg btn-outline-danger">Delete</button>
+                </div>
+            </form>
+          </td>
           </tr>
         <% } %>
       </tbody>
