--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -25,6 +26,13 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+                <form method="POST" action="/urls/9sm5xK/update">
+                  <div class="button">
+                    <button type="submit" class="btn-lg btn-outline-primary">Edit</button>
+                  </div>
+              </form>
+            </td>
             <td>
               <form method="POST" action="/urls/9sm5xK/delete">
                 <div class="button">
