--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,14 +27,14 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-                <form method="POST" action="/urls/9sm5xK/update">
+                <form method="POST" action="/urls/<%= url %>/update">
                   <div class="button">
                     <button type="submit" class="btn-lg btn-outline-primary">Edit</button>
                   </div>
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/9sm5xK/delete">
+              <form method="POST" action="/urls/<%= url %>/delete">
                 <div class="button">
                   <button type="submit" class="btn-lg btn-outline-danger">Delete</button>
                 </div>
