--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,12 +14,12 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-      <div class="card-body bg-light">
+      <div class="card-body bg-light border-top border-secondary">
           <h2 class="card-title text-muted">Edit</h2>
           <form>
               <span class="card-text text-muted font-weight-bold">New URL:</span>
               <input type="text" name="longURL" value="<%= longURL %>">
-              <button type="submit" class="btn-lg btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
           </form> 
       </div>
     <div class="card-footer text-muted"></div>
