--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,12 +8,12 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <span class="float-right">
+        <div class="pull-right">
           <form method="POST" action="/login">
             <input type="text" name="name" value="username">
             <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </span>
+          </form>
+        </div>
       </div>
     </div>
   </nav>
