--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,27 +1,31 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <div class="text-right">
-          <% if(username){ %>
-            <form method="POST" action="/logout" class="form-inline">
-              <span class="text-muted font-weight-bold">Logged in As: <%= username %>!</span>
-              <button type="submit" class="btn btn-outline-dark">Logout</button>
-            </form>
-        <% } else { %>
-            <form method="POST" action="/login">
-              <input type="text" name="name" value="username">
-              <button type="submit" class="btn btn-outline-dark">Login</button>
-            </form>
-          <% } %>
-        </div>
-      </div>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="/urls">My URLs<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/urls/new">Create New URL</a>
+        </li>
+      </ul>
+
+      <% if(username){ %>
+        <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
+          <span class="margin-right-lg">Logged In As: <%= username %>!</span>
+          <button type="submit" class="btn btn-outline-dark my-2 my-sm-0 margin-left-lg">Logout</button>
+        </form>
+      <% } else { %>
+        <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+          <input type="text" class="text-muted form-control mr-sm-2" name="name" placeholder="Username">
+          <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Login</button>
+        </form>
+      <% } %>
     </div>
   </nav>
 </header>
