--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,9 +15,9 @@
         </li>
       </ul>
 
-      <% if (user_id) { %>
+      <% if (user) { %>
         <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
-          <span class="mr-2">Logged In As: <%= user_id.email %>!</span>
+          <span class="mr-2">Logged In As: <%= user.email %>!</span>
           <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Logout</button>
         </form>
       <% } else { %>
