--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="/urls">My URLs<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/urls">My URLs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/urls/new">Create New URL</a>
@@ -21,9 +21,12 @@
           <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Logout</button>
         </form>
       <% } else { %>
-        <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
-          <input type="text" class="text-muted form-control mr-sm-2" name="name" placeholder="Username">
-          <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Login</button>
+
+        <form method="Get" action="/login" class="form-inline my-2 my-lg-0 mr-2">
+          <button type="submit" class="btn btn-outline-light my-2 my-sm-0 border-0">Login</button>
+        </form>
+        <form method="Get" action="/register" class="form-inline my-2 my-lg-0">
+          <button type="submit" class="btn btn-outline-light my-2 my-sm-0 border-0">Register</button>
         </form>
       <% } %>
     </div>
