--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,12 +12,18 @@
   <% include ./partials/_header %>
   <main style="margin: 1em;">
     <h3>Login</h3>
-      <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
-        <label for="email">Email address</label>
-        <input type="email" class="text-muted form-control mr-sm-2" name="email" placeholder="Enter email">
-        <label for="password">Password</label>
-        <input type="password" class="text-muted form-control mr-sm-2" name="password" placeholder="Password">
-        <button type="submit" class="btn btn-primary my-2 my-sm-0">Login</button>
+      <form method="POST" action="/login">
+        <div class="form-group col-sm-4">
+          <label for="email">Email address</label>
+          <input type="email" class="text-muted form-control" name="email" placeholder="Enter email">
+        </div>
+        <div class="form-group col-sm-4">
+          <label for="password">Password</label>
+          <input type="password" class="text-muted form-control" name="password" placeholder="Password">
+        </div>
+        <div class="form-group col-sm-4">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
       </form>
   </main>
   
