--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,13 +12,19 @@
   <% include ./partials/_header %>
   <main style="margin: 1em;">
     <h3>Create Account</h3>
-      <form method="POST" action="/register" class="form-inline my-2 my-lg-0">
+    <form method="POST" action="/login">
+      <div class="form-group col-sm-4">
         <label for="email">Email address</label>
-        <input type="email" class="text-muted form-control mr-sm-2" name="email" placeholder="Enter email">
+        <input type="email" class="text-muted form-control" name="email" placeholder="Enter email">
+      </div>
+      <div class="form-group col-sm-4">
         <label for="password">Password</label>
-        <input type="password" class="text-muted form-control mr-sm-2" name="password" placeholder="Password">
-        <button type="submit" class="btn btn-primary my-2 my-sm-0">Register</button>
-      </form>
+        <input type="password" class="text-muted form-control" name="password" placeholder="Password">
+      </div>
+      <div class="form-group col-sm-4">
+        <button type="submit" class="btn btn-primary">Register</button>
+      </div>
+    </form>
   </main>
   
   <!-- Bootstrap JS -->
