--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
   <% include ./partials/_header %>
   <main style="margin: 1em;">
     <h3>Create Account</h3>
-    <form method="POST" action="/login">
+    <form method="POST" action="/register">
       <div class="form-group col-sm-4">
         <label for="email">Email address</label>
         <input type="email" class="text-muted form-control" name="email" placeholder="Enter email">
