--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,9 @@
 </head>
 <body>
   <% include ./partials/_header %>
+  <% if (statusCode === 400) { %>
+    <% include ./partials/_statusCode400 %>
+  <% } %>
   <main style="margin: 1em;">
     <h3>Create Account</h3>
     <form method="POST" action="/register">
