Implemented status code 403 banner

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,9 @@
 </head>
 <body>
   <% include ./partials/_header %>
+  <% if (statusCode === 403) { %>
+    <% include ./partials/_statusCode403 %>
+  <% } %>
   <main style="margin: 1em;">
     <h3>Login</h3>
     <form method="POST" action="/login">
