--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,28 +1,28 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+  <nav class='navbar navbar-expand-lg navbar-dark bg-success'>
+    <a class='navbar-brand' href='/urls'>TinyApp</a>
+    <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarNavAltMarkup' aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
+      <span class='navbar-toggler-icon'></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="/urls">My URLs</a>
+    <div class='collapse navbar-collapse' id='navbarNavAltMarkup'>
+      <ul class='navbar-nav mr-auto mt-2 mt-lg-0'>
+        <li class='nav-item active'>
+          <a class='nav-link' href='/urls'>My URLs</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/urls/new">Create New URL</a>
+        <li class='nav-item'>
+          <a class='nav-link' href='/urls/new'>Create New URL</a>
         </li>
       </ul>
 
       <% if (user) { %>
-        <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
-          <span class="mr-2">Logged In As: <%= user.email %>!</span>
-          <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Logout</button>
+        <form method='POST' action='/logout' class='form-inline my-2 my-lg-0'>
+          <span class='mr-2'>Logged In As: <%= user.email %>!</span>
+          <button type='submit' class='btn btn-outline-dark my-2 my-sm-0'>Logout</button>
         </form>
       <% } else { %>
-        <a class="nav-link btn btn-outline-light my-2 my-sm-0 border-0 mr-2" href="/login">Login</a>
-        <a class="nav-link btn btn-outline-light my-2 my-sm-0 border-0" href="/register">Register</a>
+        <a class='nav-link btn btn-outline-light my-2 my-sm-0 border-0 mr-2' href='/login'>Login</a>
+        <a class='nav-link btn btn-outline-light my-2 my-sm-0 border-0' href='/register'>Register</a>
       <% } %>
     </div>
   </nav>
