--- a/views/partials/_loginWarning.ejs
+++ b/views/partials/_loginWarning.ejs
@@ -1,3 +1,3 @@
-<div class="alert alert-danger text-center rounded-lg" role="alert">
-  <h4>To display this page, please <a class="alert-link" href="/login">login</a></h4>
+<div class='alert alert-danger text-center rounded-lg' role='alert'>
+  <h4>To display this page, please <a class='alert-link' href='/login'>login</a></h4>
 </div>
