--- a/views/partials/_statusCode400.ejs
+++ b/views/partials/_statusCode400.ejs
@@ -1,3 +1,3 @@
-<div class="alert alert-warning text-center rounded-lg" role="alert">
-    <h4>Make sure both email and password fields are filled and valid.</h4>
-  </div>
+<div class='alert alert-warning text-center rounded-lg' role='alert'>
+  <h4>Make sure both email and password fields are filled and valid.</h4>
+</div>
