--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css' integrity='sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS' crossorigin='anonymous'>
   <title>TinyApp</title>
 </head>
 <body>
@@ -13,26 +13,26 @@
   <% if (statusCode === 400) { %>
     <% include ./partials/_statusCode400 %>
   <% } %>
-  <main style="margin: 1em;">
+  <main style='margin: 1em;'>
     <h3>Create Account</h3>
-    <form method="POST" action="/register">
-      <div class="form-group col-sm-4">
-        <label for="email">Email address</label>
-        <input type="email" class="text-muted form-control" name="email" placeholder="Enter email">
+    <form method='POST' action='/register'>
+      <div class='form-group col-sm-4'>
+        <label for='email'>Email address</label>
+        <input type='email' class='text-muted form-control' name='email' placeholder='Enter email'>
       </div>
-      <div class="form-group col-sm-4">
-        <label for="password">Password</label>
-        <input type="password" class="text-muted form-control" name="password" placeholder="Password">
+      <div class='form-group col-sm-4'>
+        <label for='password'>Password</label>
+        <input type='password' class='text-muted form-control' name='password' placeholder='Password'>
       </div>
-      <div class="form-group col-sm-4">
-        <button type="submit" class="btn btn-primary">Register</button>
+      <div class='form-group col-sm-4'>
+        <button type='submit' class='btn btn-primary'>Register</button>
       </div>
     </form>
   </main>
   
   <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'></script>
+  <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous'></script>
 </body>
 </html>
