--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,7 +11,7 @@
 <body>
   <% include ./partials/_header %>
   <% if (!user) { %>
-    <% include ./partials/_loginWarning %>
+    <% include ./partials/_loginRequired %>
   <% } else { %>
   <main style='margin: 1em;'>
     <h3>My URLs</h3>
