Fixed bug with status code 400, added style to alerts

--- a/views/partials/_loginRequired.ejs
+++ b/views/partials/_loginRequired.ejs
@@ -1,3 +1,3 @@
-<div class='alert alert-danger text-center rounded-lg' role='alert'>
+<div class='alert alert-danger text-center rounded-lg my-3 mx-4' role='alert'>
   <h4>To display this page, please <a class='alert-link' href='/login'>login</a></h4>
 </div>
