--- a/views/partials/_statusCode403.ejs
+++ b/views/partials/_statusCode403.ejs
@@ -1,3 +1,3 @@
-<div class='alert alert-warning text-center rounded-lg my-3 mx-4' role='alert'>
+<div class='alert alert-warning shadow text-center rounded-lg my-3 mx-4' role='alert'>
   <h4>Make sure both <strong>email</strong> and <strong>password</strong> fields are valid.</h4>
 </div>
