Added name to the footer

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,8 +1,8 @@
 <!-- views/partials/_footer.ejs -->
-<footer class="page-footer bg-success fixed-bottom">
+<footer class='page-footer bg-success fixed-bottom'>
   
-    <div class="text-center py-3">
-      My footer
+    <div class='text-center text-light py-3'>
+      Sebastien Dufresne - @Seb
     </div>
     
   </footer>
