--- a/views/404.ejs
+++ b/views/404.ejs
@@ -11,7 +11,9 @@
 <body>
   <% include ./partials/_header %>
   <main style='margin: 1em;'>
-      404 - Not Found
+    <div class='text-center'>
+      <img src='img/page404.png' class='shadow img-fluid' alt='404 - Page Not Found'>
+    </div>
   </main>
   <% include ./partials/_footer %>
   
