Changed the way urls_new behaves to bring it on par with urls_show

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -11,6 +11,9 @@
   </head>
   <body>
     <% include partials/_header %>
+    <% if (!user) { %>
+      <% include ./partials/_loginRequired %>
+    <% } else { %>
     <main style='margin: 1em;'>
       <h3>Create TinyURL</h3>
       <form class='form-inline' action='/urls' method='POST'>
@@ -21,6 +24,7 @@
         </div>
       </form>
     </main>
+    <% } %>
     <% include ./partials/_footer %>
     <!-- Bootstrap JS -->
     <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
