--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,7 +20,7 @@
         <% if (toUpdate && (user.id === url.userID)) { %>
         <div class='card-body bg-light border-top'>
             <h2 class='card-title text-muted'>Edit</h2>
-            <form method='POST' action='/urls/<%= shortURL %>'>   <!-- Make sure path is right -->
+            <form method='POST' action='/urls/<%= shortURL %>?_method=PUT'>
                 <span class='card-text text-muted font-weight-bold'>New URL:</span>
                 <input type='text' name='longURL' value='<%= url.longURL %>'>
                 <button type='submit' class='btn btn-primary'>Submit</button>
