--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,6 +6,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css' integrity='sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS' crossorigin='anonymous'>
+  <script scr='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.26/moment-timezone-utils.min.js'></script>
   <title>TinyApp - My URLs</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
         <tr>
           <th scope='col'>Short URL</th>
           <th scope='col'>Long URL</th>
+          <th scope='col'>Created</th>
           <th scope='col'>Edit</th>
           <th scope='col'>Delete</th>
         </tr>
@@ -29,6 +31,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
+            <td>Created</td>
             <td>
               <form method='POST' action='/urls/<%= url %>/update'>
                 <div class='button'>
