--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
   <% include ./partials/_header %>
   <main style='margin: 1em;'>
     <div class='text-center'>
-      <img src='img/page404.png' class='shadow img-fluid' alt='404 - Page Not Found'>
+      <img src='/img/page404.png' class='shadow img-fluid' alt='404 - Page Not Found'>
     </div>
   </main>
   <% include ./partials/_footer %>
