--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,25 +11,29 @@
   <% if (!user) { %>
     <% include ./partials/_loginRequired %>
   <% } else { %>
-    <div class='card text-center'>
-        <div class='card-header'></div>
-        <div class='card-body'>
-          <h5 class='card-title'>TinyURL for: <%= url.longURL %></h5>
-          <p class='card-text'>Short URL: <a href='/u/<%= shortURL %>'><%= shortURL %></a></p>
-          <p class='card-text'>Created date: <%= moment(url.createdDate).format('YYYY-MM-DD HH:mm [UTC]'); %></p>
-        </div>
-        <% if (toUpdate && (user.id === url.userID)) { %>
-        <div class='card-body bg-light border-top'>
-            <h2 class='card-title text-muted'>Edit</h2>
-            <form method='POST' action='/urls/<%= shortURL %>?_method=PUT'>
-                <span class='card-text text-muted font-weight-bold'>New URL:</span>
-                <input type='text' name='longURL' value='<%= url.longURL %>'>
-                <button type='submit' class='btn btn-primary'>Submit</button>
-            </form> 
-        </div>
-        <% } %>
-      <div class='card-footer text-muted'></div>
-    </div>
+    <% if (!url.longURL) { %>
+      <% include ./partials/_invalidShortURL %>
+    <% } else { %>
+      <div class='card text-center'>
+          <div class='card-header'></div>
+          <div class='card-body'>
+            <h5 class='card-title'>TinyURL for: <%= url.longURL %></h5>
+            <p class='card-text'>Short URL: <a href='/u/<%= shortURL %>'><%= shortURL %></a></p>
+            <p class='card-text'>Created date: <%= moment(url.createdDate).format('YYYY-MM-DD HH:mm [UTC]'); %></p>
+          </div>
+          <% if (toUpdate && (user.id === url.userID)) { %>
+          <div class='card-body bg-light border-top'>
+              <h2 class='card-title text-muted'>Edit</h2>
+              <form method='POST' action='/urls/<%= shortURL %>?_method=PUT'>
+                  <span class='card-text text-muted font-weight-bold'>New URL:</span>
+                  <input type='text' name='longURL' value='<%= url.longURL %>'>
+                  <button type='submit' class='btn btn-primary'>Submit</button>
+              </form> 
+          </div>
+          <% } %>
+        <div class='card-footer text-muted'></div>
+      </div>
+    <% } %>
   <% } %>
   <% include ./partials/_footer %>
   <!-- Bootstrap JS -->
