--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
             <td><%= urls[url].longURL %></td>
             <td><%= moment(urls[url].createdDate).format('YYYY-MM-DD HH:mm [UTC]'); %></td>
             <td>
-              <form method='GET' action='/urls/<%= url %>/edit'>
+              <form method='GET' action='/urls/<%= url %>'>
                 <div class='button'>
                   <button type='submit' class='btn-lg btn-outline-primary'>Edit</button>
                 </div>
