--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,36 +16,48 @@
   <% } else { %>
   <main style='margin: 1em;'>
     <h3>My URLs</h3>
-    <table class='table'>
+
+    <table class="table table-condensed" style="border-collapse:collapse;">
       <thead>
         <tr>
-          <th scope='col'>Short URL</th>
-          <th scope='col'>Long URL</th>
-          <th scope='col'>Created</th>
-          <th scope='col'>Edit</th>
-          <th scope='col'>Delete</th>
+          <th>Short URL</th>
+          <th>Long URL</th>
+          <th>Created</th>
+          <th>Edit</th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-          <tr>
-            <td><%= url %></td>
-            <td><%= urls[url].longURL %></td>
-            <td><%= moment(urls[url].createdDate).format('YYYY-MM-DD HH:mm [UTC]'); %></td>
-            <td>
+          <tr data-toggle="collapse" data-target="#url-<%= url %>" class="accordion-toggle">
+            <td scope='col'>
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapse<%= url %>" aria-expanded="true" aria-controls="collapse<%= url %>">
+                <%= url %>
+              </button>
+            </td scope='col'>
+            <td scope='col'><%= urls[url].longURL %></td>
+            <td scope='col'><%= moment(urls[url].createdDate).format('YYYY-MM-DD HH:mm [UTC]'); %></td>
+            <td scope='col'>
               <form method='GET' action='/urls/<%= url %>'>
                 <div class='button'>
                   <button type='submit' class='btn-lg btn-outline-primary'>Edit</button>
                 </div>
               </form>
             </td>
-            <td>
+            <td scope='col'>
               <form method='POST' action='/urls/<%= url %>?_method=DELETE'>
                 <div class='button'>
                   <button type='submit' class='btn-lg btn-outline-danger'>Delete</button>
                 </div>
-            </form>
-          </td>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="5" class="hiddenRow">
+              <div id="url-<%= url %>" class="accordian-body collapse">
+                <%= url %>
+              </div>
+            </td>
           </tr>
         <% } %>
       </tbody>
